Changed description and a bit

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "v4",
   "description": "Personal Website V4",
   "version": "1.0.0",
-  "author": "Brittany Chiang <naitik1222@gmail.com>",
+  "author": "Naitik Shah <naitik1222@gmail.com>",
   "repository": {
     "type": "git",
     "url": "https://github.com/bnaitik2314"
